# 7hills

./: .gitignore  MIGRATION_POLICY.md  Makefile
QuantKubera/: .gitignore  Makefile  QuantKubera_Alpha_to_Zero.ipynb  QuantKubera_Full_Experiment.py  QuantKubera_Monolith.ipynb  QuantKubera_Monolith_v2.ipynb  QuantKubera_Monolith_v3.ipynb  QuantKubera_Monolith_v3_output.ipynb  README.md  _assemble_notebook.py  _build_v3.py  pyproject.toml
QuantKubera/_cells/: cell0_markdown.md  cell1.py  cell2.py  cell2b.py  cell3.py  cell4.py  cell5.py  cell6.py  cell7.py  cell8.py
QuantKubera/config/: base.yaml  train_config.py
QuantKubera/data/afml_events/: 360ONE_afml.csv  ABB_afml.csv  ABCAPITAL_afml.csv  ADANIENSOL_afml.csv  ADANIENT_afml.csv  ADANIGREEN_afml.csv  ADANIPORTS_afml.csv  ALKEM_afml.csv  AMBER_afml.csv  AMBUJACEM_afml.csv  ANGELONE_afml.csv  APLAPOLLO_afml.csv  APOLLOHOSP_afml.csv  ASHOKLEY_afml.csv  ASIANPAINT_afml.csv  ASTRAL_afml.csv  AUBANK_afml.csv  AUROPHARMA_afml.csv  AXISBANK_afml.csv  BAJAJ-AUTO_afml.csv  BAJAJFINSV_afml.csv  BAJAJHLDNG_afml.csv  BAJFINANCE_afml.csv  BANDHANBNK_afml.csv  BANKBARODA_afml.csv  BANKINDIA_afml.csv  BDL_afml.csv  (+181 more)
QuantKubera/docs/: architecture.md  data_availability.md  gpu_fix.md
QuantKubera/notebooks/: check_data_availability.py  debug_gpu.py  isolate_elu_failure.py  test_gpu_config.py  test_with_triton_libdevice.py  test_xla_disabled.py  verify_model.py  verify_pipeline.py
QuantKubera/scripts/: analyze_feature_importance.py  backtest_cpcv.py  compute_cpd.py  compute_cpd_gpu.py  count_instruments.py  demo_afml_full.py  demo_cpcv.py  demo_cusum.py  demo_labeling.py  deploy.py  evaluate_afml.py  fetch_all_futures.py  monitor_feature_importance.py  prepare_afml_dataset.py  train.py  train_afml.py  train_meta.py  train_universe.py
QuantLaxmi/: .env.example  .gitignore  .pre-commit-config.yaml  .venv  48hr_crypto_capture.txt  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  OPTIONS_ENGINE.TXT.odt  README.md  RL_summary.txt  TFT_symmary.txt  analysis.txt  docker-compose.yml  fix1.txt  grassmann.txt  india_capture.txt  phase27_fix.patch  phase27_fix_code_only.patch  prompt2.txt  pyproject.toml  summary.txt
QuantLaxmi/.cargo/: config.toml
QuantLaxmi/collectors/: auth.py
QuantLaxmi/configs/: signals_manifest.json
QuantLaxmi/core/: __init__.py
QuantLaxmi/data/: __init__.py  _paths.py  bars.py  convert.py  nse_convert.py  store.py  tick_loader.py  zerodha.py
QuantLaxmi/docs/: API_SKELETON_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  AUDIT_LOG.md  CONTRIBUTING.md  DECOMMISSION_KUBERA.md  DOCTRINE_NO_SILENT_POISONING.md  EC2_TRAINING_GUIDE.md  GETTING_STARTED.md  INDIA_FNO_PAPER_TRADING_20260130.md  NSE _Data_Bhavcopy_other.txt  NSE_DAILY_COLLECTOR.md  PHASE_STATUS.md  PRODUCTION_CONTRACT.md  PROGRESS_LEDGER.md  QUANTLAXMI_CHARTER_v2_1.md  ROADMAP_PHASES.md  STRATEGY_ANALYSIS.md  STRATEGY_CONTRACTS_TIER1_V1.md  TFT_PRODUCTION_TRAINING_NOTES.md  quantlaxmi_ui_plan.md  venv_setup.md
QuantLaxmi/engine/: __init__.py  __main__.py  orchestrator.py  state.py
QuantLaxmi/features/: __init__.py  base.py  divergence_flow.py  fractional.py  fti.py  matrix.py  mega.py  microstructure.py  mock_theta.py  options_features.py  ramanujan.py  returns.py  rmt.py  technical.py  temporal.py  trend.py  vedic_angular.py  volatility.py
QuantLaxmi/models/: __init__.py
QuantLaxmi/notebooks/: arb_research_skeleton.ipynb
QuantLaxmi/quantlaxmi/: __init__.py
QuantLaxmi/research/: BLUEPRINT.md  ensemble_backtest.py  fetch_telegram_books.py  fetch_telegram_data.py  phase1_verifier.py  run_all.py  run_hmm_kite.py  slrt.txt
QuantLaxmi/rust/: Cargo.toml  crypto_data_capture.txt  fti.txt
QuantLaxmi/scripts/: b12_baseline_model.py  batch_score_calendar_carry.sh  check_isolation.sh  india_make_quotes.sh  india_news_daily.sh  india_preflight_check.sh  iv_paper_daily.sh  kite_depth.sh  nse_daily.sh  quantlaxmi_migration_harness.sh  rndr_paper_daily.sh  safe-test.sh  seed_why_panel.py  start_services.sh  watchdog_kite_depth.sh
QuantLaxmi/strategies/: __init__.py  base.py  protocol.py  registry.py  s10_gamma_scalp.py  s11_pairs.py  s1_vrp_rndr.py  s2_ramanujan_cycles.py  s3_institutional_flow.py  s4_iv_mean_revert.py  s5_tick_microstructure.py  s6_multi_factor.py  s7_regime_switch.py  s8_expiry_theta.py  s9_momentum.py
QuantLaxmi/systemd/: capture-session.sh  india-capture.env  quantlaxmi-india-capture.service
QuantLaxmi/telegram/: audit_telegram_dates.py  list_telegram_channels.py  list_telegram_dialogs.py  search_nfo_dialogs.py  search_telegram_archive.py  telegram_census.py  telegram_downloader.py  test_telegram_load.py
QuantLaxmi/terminal/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
QuantLaxmi/tests/: conftest.py  test_afml_integration.py  test_augmentation.py  test_bars.py  test_circuit_breaker_flatten.py  test_conformal_ensemble_aug.py  test_costs.py  test_crypto_expanded.py  test_crypto_flow.py  test_crypto_news.py  test_crypto_tradeable.py  test_dataloader_and_clipping.py  test_density_options.py  test_density_strategy.py  test_distributional_rl.py  test_drift_monitor.py  test_engine.py  test_feature_cache_and_rotation.py  test_features.py  test_foundation_model.py  test_fti.py  test_india_news.py  test_inference_safety.py  test_iv_mean_revert.py  test_kite_depth.py  test_macro_and_ema.py  test_momentum_causality.py  test_news_sentiment.py  test_nse_collectors_extended.py  test_nse_daily.py  test_offline_rl.py  test_option_chain_collector.py  test_options_features.py  test_pipeline.py  test_ppo_sac.py  test_production_tft.py  test_risk_and_monitoring.py  test_risk_neutral.py  test_rl_integration.py  test_rl_patterns.py  (+16 more)
QuantLaxmi/ui/: next.config.mjs  package-lock.json  package.json  tsconfig.json
qlx_crypto/: .gitignore  pyproject.toml
qlx_crypto/examples/: binance_live.py
qlx_crypto/research/: cross_sectional_mr.py  crypto_walkforward.py
qlx_crypto/scripts/: clrs_paper.sh  watchdog_clrs.sh  watchdog_paper.sh
qlx_crypto/tests/: test_features.py  test_pipeline.py  test_tick_collector.py
(+4379 files in other folders)
