[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantlaxmi"
version = "0.1.0"
description = "QuantLaxmi India — lookahead-safe quantitative research engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
zerodha = ["kiteconnect>=5.0", "pyotp>=2.9"]
vbt = ["vectorbtpro"]
dev = ["pytest>=7.0", "pytest-cov", "hypothesis>=6.0", "pytest-asyncio>=0.23"]
all = ["quantlaxmi[zerodha,vbt,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
