[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qlx-crypto"
version = "0.1.0"
description = "QuantLaxmi Crypto — microstructure-driven crypto trading engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "websockets>=12.0",
]

[project.optional-dependencies]
binance = []
dev = ["pytest>=7.0", "pytest-cov", "hypothesis>=6.0", "pytest-asyncio>=0.23"]
all = ["qlx-crypto[binance,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
