[package]
name = "basis-harvester"
version = "0.1.0"
edition = "2024"
description = "Crypto Spot-Perp Basis Mean-Reversion — delta-neutral z-score trading"

[[bin]]
name = "basis-scanner"
path = "src/bin/basis-scanner.rs"

[[bin]]
name = "basis-harvester"
path = "src/bin/basis-harvester.rs"

[[bin]]
name = "basis-tui"
path = "src/bin/basis-tui.rs"

[lib]
path = "src/lib.rs"

[dependencies]
quantlaxmi-paper = { path = "../../crates/quantlaxmi-paper" }
quantlaxmi-runner-crypto = { path = "../../crates/quantlaxmi-runner-crypto" }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
