[package]
name = "quantlaxmi-crypto"
version = "0.1.0"
edition = "2024"
description = "QuantLaxmi Crypto - Cryptocurrency Trading (Binance)"

[[bin]]
name = "quantlaxmi-crypto"
path = "src/main.rs"

[dependencies]
# Crypto runner library (brings all Crypto-specific deps)
quantlaxmi-runner-crypto = { path = "../../crates/quantlaxmi-runner-crypto" }

# Error handling
anyhow = { workspace = true }

# Environment
dotenv = { workspace = true }
