[package]
name = "quantlaxmi-executor"
version = "0.1.0"
edition = "2021"
description = "Order execution engine for QuantLaxmi (simulation and live trading)"
publish = false

[dependencies]
quantlaxmi-models = { path = "../quantlaxmi-models" }
quantlaxmi-core = { path = "../quantlaxmi-core" }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_pcg = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[features]
live = []  # Enable for live trading support

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "benchmark_executor"
harness = false
