[package]
name = "quantlaxmi-gates"
version = "0.1.0"
edition = "2024"
description = "Production gates for QuantLaxmi: DataTruth, ReplayParity, BacktestCorrectness, Robustness, Deployability"

[dependencies]
quantlaxmi-models = { path = "../quantlaxmi-models" }
quantlaxmi-wal = { path = "../quantlaxmi-wal" }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
