[package]
name = "quantlaxmi-models"
version = "0.1.0"
edition = "2024"
description = "Core trading event models for QuantLaxmi"
publish = false

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
