[package]
name = "quantlaxmi-options"
version = "0.1.0"
edition = "2021"
description = "Advanced derivatives and options engine for QuantLaxmi"
publish = false

[dependencies]
quantlaxmi-models = { path = "../quantlaxmi-models" }
quantlaxmi-core = { path = "../quantlaxmi-core" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
good_lp = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
