[package]
name = "quantlaxmi-regime"
version = "0.1.0"
edition = "2021"
description = "Grassmann manifold regime detection for QuantLaxmi"

[dependencies]
# Core
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"

# Linear algebra (deterministic subset)
nalgebra = "0.33"

# Internal
quantlaxmi-models = { path = "../quantlaxmi-models" }

[dev-dependencies]
approx = "0.5"
