[package]
name = "quantlaxmi-models"
version = "0.1.0"
edition = "2024"
description = "Core trading event models for QuantLaxmi"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
