[package]
name = "quantlaxmi-options-engine"
version = "0.1.0"
edition = "2021"
description = "World-class options trading engine with Greeks, volatility surface, and multi-leg strategies"

[[bin]]
name = "options-backtest"
path = "src/bin/options_backtest.rs"

[[bin]]
name = "gate-comparison"
path = "src/bin/gate_comparison.rs"

[[bin]]
name = "paper-trading"
path = "src/bin/paper_trading.rs"

[[bin]]
name = "live-paper"
path = "src/bin/live_paper.rs"

[[bin]]
name = "live-paper-tui"
path = "src/bin/live_paper_tui.rs"

[[bin]]
name = "warmup-debug"
path = "src/bin/warmup_debug.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"
# Signal handling
ctrlc = "3.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing-subscriber = "0.3"
# Math and statistics
statrs = "0.17"
nalgebra = "0.33"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing for determinism
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Internal dependencies
quantlaxmi-regime = { path = "../quantlaxmi-regime" }
quantlaxmi-connectors-zerodha = { path = "../quantlaxmi-connectors-zerodha" }
quantlaxmi-core = { path = "../quantlaxmi-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
approx = "0.5"

[features]
default = []
