[package]
name = "quantlaxmi-strategy"
version = "0.1.0"
edition = "2024"
description = "Strategy SDK for QuantLaxmi - deterministic alpha production"

[dependencies]
# Internal crates
quantlaxmi-models = { path = "../quantlaxmi-models" }
quantlaxmi-events = { path = "../quantlaxmi-events" }
slrt-ref = { path = "../slrt-ref" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { workspace = true }

# IDs
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
